# chrondb

./: .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  config.example.edn  deps.edn
.clj-kondo/config/: config.edn
.github/: copilot-instructions.md
.github/workflows/: benchmark.yml  build-native-image.yml  build-shared-library.yml  coverage.yml  native-image.yml  publish-docker.yml  release-shared-library.yml  tests.yml
bindings/: README.md
bindings/python/: README.md  pyproject.toml
bindings/python/chrondb/: _ffi.py  client.py
bindings/python/tests/: test_chrondb.py
bindings/rust/: Cargo.toml  README.md  build.rs  wrapper.h
bindings/rust/src/: error.rs  ffi.rs  ffi_stub.rs  lib.rs  setup.rs
dev/chrondb/: build.clj  native_image.clj  shared_library.clj
docs/: NATIVE_IMAGE.md  README.md  SUMMARY.md  api.md  architecture.md  ast-queries.md  benchmark.md  configuration.md  data-model.md  ddl.md  examples-clojure.md  examples-postgresql.md  examples-redis.md  examples-rest.md  examples.md  faq.md  index.md  operations.md  performance.md  protocols.md  quickstart.md  remote-storage.md  validation.md  version-control.md
docs/bindings/: python.md  rust.md
docs/releases/: next.md
docs/tutorials/: branching-guide.md  time-travel-guide.md
graalvm-config/: jni-config.json  reflect-config.json  resource-config.json  system-properties.properties
resources/: log4j.properties
scripts/: build-native-image-from-clj.sh  build-native-image.sh  compile-jni.sh  diagnose-native-image.sh  generate-reflection-config.sh  run_benchmark.sh  run_redis_tests.sh  setup_redis_tests.sh
src/chrondb/: config.clj  core.clj  example.clj  test_data.clj
src/jni/: libjava_jdk_internal_misc_ScopedMemoryAccess.c
test/chrondb/: run_benchmark_tests.clj  run_coverage.clj  run_redis_tests_sequential.clj  run_tests_no_redis.clj  (+4 more)
(+135 files in other folders)
