[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chrondb"
version = "0.1.0"
description = "Python bindings for ChronDB - a time-traveling key/value database"
license = {text = "AGPL-3.0"}
requires-python = ">=3.8"
readme = "README.md"

[project.urls]
Repository = "https://github.com/moclojer/chrondb"

[tool.setuptools.package-data]
chrondb = ["lib/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
