[package]
name = "chrondb"
version = "0.1.0"
edition = "2021"
description = "Rust bindings for ChronDB - a time-traveling key/value database"
license = "AGPL-3.0"
repository = "https://github.com/avelino/chrondb"
readme = "README.md"

[dependencies]
serde_json = "1"
# Dynamic library loading
libloading = "0.8"
# Runtime auto-setup dependencies
ureq = "2"
flate2 = "1"
tar = "0.4"
dirs = "5"

[build-dependencies]
ureq = "2"
flate2 = "1"
tar = "0.4"
dirs = "5"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
